--- a/ДЗ3/assets/css/style.css
+++ b/ДЗ3/assets/css/style.css
@@ -75,11 +75,81 @@ header {
 	align-items: center;
 }
 
+.dropDown__link {
+	display: inline;
+	position: relative;
+}
+
+.dropDownMain::before {
+	content: "";
+	width: 10px;
+	height: 10px;
+	background-color: #fff;
+	border-left: 1px solid #e9e9e9;
+	border-top: 1px solid #e9e9e9;
+	display: block;
+	position: absolute;
+	transform: rotate(45deg);
+	bottom: 99%;
+	left: 24%;
+}
+
+.dropDownMain {
+	display: none;
+}
+
+.dropDownMain {
+	position: absolute;
+	width: 263px;
+	height: 530px;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
+	border: 1px solid #e9e9e9;
+}
+
+.dropDownMain h1, .drop__navigation__block h1 {
+	color: #232323;
+	font-family: Lato;
+	font-size: 14px;
+	font-weight: 700;
+	margin-left: 15px;
+	margin-top: 20px;
+}
+
+.dropDownMain hr, .drop__navigation__block hr {
+	margin-top: 0;
+	margin-top: 10px;
+	width: 236px;
+	margin-left: 13px;
+}
+
+.dropDown__link2 a {
+	color: #4f4f4f!important;
+	font-family: Lato;
+	font-size: 14px!important;
+	font-weight: 400!important;
+	line-height: 28px!important;
+	text-transform: lowercase!important;
+	text-transform: capitalize!important;
+}
+
+.dropDown__link2 {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-direction: column;
+	margin-left: 20px;
+	margin-bottom: 20px;
+}
+
 .container__search form {
 	position: relative;
 }
 
-.container__search a {
+#container__search_link {
 	color: #222222;
 	font-size: 14px;
 	font-weight: 300;
@@ -93,6 +163,12 @@ header {
 	background-color: #cdcdcc;
 	background-image: linear-gradient(to bottom, #f9f9f9 0%, #f5f5f5 100%);
 	margin-top: 4px;
+	margin-right: -5px;
+}
+
+.dropDown__link:hover .dropDownMain {
+	display: block;
+	z-index: 1;
 }
 
 .container__search img {
@@ -191,6 +267,58 @@ hr {
 .navigation a:hover {
 	color: #808080;
 	transition: .2s linear;
+}
+
+.li__drop__navigation {
+	position: relative;
+}
+
+.li__drop__navigation:hover .drop__navigation {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+}
+
+.drop__navigation {
+	width: 846px;
+	height: 310px;
+	background-color: #fff;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
+	border: 1px solid #e9e9e9;
+	border-radius: 5px;
+	position: absolute;
+	left: -26px;
+	top: 25px;
+	display: none;
+}
+
+.padding {
+	margin-right: 20px;
+}
+
+.padding img {
+	margin-bottom: 10px;
+}
+
+.padding2 {
+	margin-bottom: 10px;
+}
+
+.triangle::before {
+	content: "";
+	width: 10px;
+	height: 10px;
+	background-color: #fff;
+	border-left: 1px solid #e9e9e9;
+	border-top: 1px solid #e9e9e9;
+	display: block;
+	position: absolute;
+	transform: rotate(45deg);
+	left: 36px;
+	top: -5px;
 }
 
 .promo {
@@ -689,7 +817,7 @@ hr {
 	padding-left: 28px;
 }
 
-.subscribe__input a {
+.subscribe__input input[type="submit"] {
 	color: #ffffff;
 	font-family: Lato;
 	font-size: 14px;
@@ -700,10 +828,12 @@ hr {
 	background-color: #f16d7f;
 	display: inline-block;
 	line-height: 46px;
-	padding-left: 21px;
+	padding-left: 0!important;
+	text-align: center;
+	cursor: pointer;
 }
 
-.subscribe__input a:hover {
+.subscribe__input input[type="submit"]:hover {
 	background-color: #000;
 	transition: .2s linear;
 }
