--- a/ДЗ3/assets/css/style3.css
+++ b/ДЗ3/assets/css/style3.css
@@ -75,11 +75,81 @@ header {
 	align-items: center;
 }
 
+.dropDown__link {
+	display: inline;
+	position: relative;
+}
+
+.dropDownMain::before {
+	content: "";
+	width: 10px;
+	height: 10px;
+	background-color: #fff;
+	border-left: 1px solid #e9e9e9;
+	border-top: 1px solid #e9e9e9;
+	display: block;
+	position: absolute;
+	transform: rotate(45deg);
+	bottom: 99%;
+	left: 24%;
+}
+
+.dropDownMain {
+	display: none;
+}
+
+.dropDownMain {
+	position: absolute;
+	width: 263px;
+	height: 530px;
+	background-color: #fff;
+	border-radius: 5px;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
+	border: 1px solid #e9e9e9;
+}
+
+.dropDownMain h1, .drop__navigation__block h1 {
+	color: #232323;
+	font-family: Lato;
+	font-size: 14px;
+	font-weight: 700;
+	margin-left: 15px;
+	margin-top: 20px;
+}
+
+.dropDownMain hr, .drop__navigation__block hr {
+	margin-top: 0;
+	margin-top: 10px;
+	width: 236px;
+	margin-left: 13px;
+}
+
+.dropDown__link2 a {
+	color: #4f4f4f!important;
+	font-family: Lato;
+	font-size: 14px!important;
+	font-weight: 400!important;
+	line-height: 28px!important;
+	text-transform: lowercase!important;
+	text-transform: capitalize!important;
+}
+
+.dropDown__link2 {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	flex-direction: column;
+	margin-left: 20px;
+	margin-bottom: 20px;
+}
+
 .container__search form {
 	position: relative;
 }
 
-.container__search a {
+#container__search_link {
 	color: #222222;
 	font-size: 14px;
 	font-weight: 300;
@@ -93,6 +163,12 @@ header {
 	background-color: #cdcdcc;
 	background-image: linear-gradient(to bottom, #f9f9f9 0%, #f5f5f5 100%);
 	margin-top: 4px;
+	margin-right: -5px;
+}
+
+.dropDown__link:hover .dropDownMain {
+	display: block;
+	z-index: 1;
 }
 
 .container__search img {
@@ -193,6 +269,58 @@ hr {
 	transition: .2s linear;
 }
 
+.li__drop__navigation {
+	position: relative;
+}
+
+.li__drop__navigation:hover .drop__navigation {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+}
+
+.drop__navigation {
+	width: 846px;
+	height: 310px;
+	background-color: #fff;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
+	border: 1px solid #e9e9e9;
+	border-radius: 5px;
+	position: absolute;
+	left: -26px;
+	top: 25px;
+	display: none;
+}
+
+.padding {
+	margin-right: 20px;
+}
+
+.padding img {
+	margin-bottom: 10px;
+}
+
+.padding2 {
+	margin-bottom: 10px;
+}
+
+.triangle::before {
+	content: "";
+	width: 10px;
+	height: 10px;
+	background-color: #fff;
+	border-left: 1px solid #e9e9e9;
+	border-top: 1px solid #e9e9e9;
+	display: block;
+	position: absolute;
+	transform: rotate(45deg);
+	left: 36px;
+	top: -5px;
+}
+
 .arrivals {
 	width: 100%;
 	height: 148px;
@@ -225,6 +353,7 @@ hr {
 	color: #636363;
 	font-family: Lato;
 	font-weight: 300;
+	text-transform: uppercase;
 }
 
 .text__arrivals span {
@@ -233,255 +362,248 @@ hr {
 	color: #f16d7f;
 }
 
-.buy {
+.slider2 {
 	width: 100%;
-	max-width: 1140px;
-	margin: 0 auto;
-	margin-top: 59px;
+	height: 777px;
+	border: 1px solid #eaeaea;
+	background-color: #f7f7f7;
+}
+
+.slider2__content {
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
 	display: flex;
 	justify-content: space-between;
-
 }
 
-.margin__details {
-	margin-top: 41px;
+.slider2__content img {
+	margin-top: 11px;
 }
 
-.margin__details span {
-	visibility: hidden;
+.slider2__content a {
+	margin-top: 354px;
+	width: 47px;
+	height: 47px;
+	background-color: #d8d8d8;
+	text-align: center;
+	line-height: 47px;
 }
 
-.details summary {
-	border-left: 5px solid #ef5b70;
-	height: 37px;
-	line-height: 37px;
-	padding-left: 11px;
+.slider2__content i {
+	width: 8px;
+	height: 14px;
+	color: #ffffff;
 }
 
-.details summary {
-  	display: block;
-  	color: #6f6e6e;
+.section {
+	width: 100%;
+	height: 1289px;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
+	position: relative;
+}
+
+.collection {
+	width: 100%;
+	max-width: 1141px;
+	height: 730px;
+	border: 1px solid #eaeaea;
+	background-color: #fff;
+	position: absolute;
+	bottom: 50%;
+}
+
+.collection__content {
+	width: 642px;
+	margin: 0 auto;
+	margin-top: 72px;
+	text-align: center;
+}
+
+.collection__content h1 {
+	color: #f16d7f;
 	font-family: Lato;
 	font-size: 14px;
 	font-weight: 700;
-	border-bottom: 1px solid #ebebeb;
-	width: 243px;
+	text-transform: uppercase;
+	margin-bottom: -15px;
 }
 
-.details summary::-webkit-details-marker {
-  	display: none;
+.collection__content_link {
+	width: 147px;
+	margin: 0 auto;
+	position: relative;
 }
 
-.details summary::after {
-  	content: '\25B2';
-  	margin-left: 137px;
-  	font-size: 10px;
-  	color: #6f6e6e;
+.collection__content_link a {
+	width: 63px;
+	height: 3px;
+	background-color: #ef5b70;
+	position: absolute;
+	bottom: 10%;
+	left: 28%;
 }
 
-.details details[open] > summary {
+.collection__content h2 {
+	color: #4d4d4d;
+	font-family: Lato;
+	font-size: 18px;
+	font-weight: 900;
+	text-transform: uppercase;
+	margin-top: 17px;
+}
+
+.collection__content p {
+	margin-top: 67px;
+	color: #5e5e5e;
+	font-family: Lato;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 24px;
+}
+
+.collection__content_info {
+	width: 335px;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+	margin: 0 auto;
+	margin-top: 28px;
+}
+
+.collection__content_info h3 {
+	color: #b9b9b9;
+	font-family: Lato;
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+.collection__content_info span {
+	color: #2f2f2f;
+}
+
+.collection__content h4 {
 	color: #ef5b70;
 	font-family: Lato;
-}
-
-.details details[open] > summary::after {
-	  content: '\25BC';
-	  color: red;
-	  margin-left: 137px;
-}
-
-.details li {
-	margin-top: 22px;
-	margin-left: 22px;
-	color: #6f6e6e;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 400;
-}
-
-.buy__content, .choice {
-	width: 100%;
-	max-width: 850px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;	
-	flex-wrap: wrap;
-}
-
-.choice h1 {
-	margin-bottom: 25px;
-	color: #6f6e6e;
-	font-family: Lato;
-	font-size: 14px;
+	font-size: 24px;
 	font-weight: 700;
-	text-transform: uppercase;
+	margin-top: 37px;
 }
 
-.trending p {
-	width: 176px;
-	font-size: 14px;
-	line-height: 26px;
-}
-
-.trending a {
-	color: #6f6e6e;
-	font-family: Lato;
-	font-weight: 400;
-}
-
-.trending span {
-	color: #dfdfdf;
-	padding-left: 6px;
-	padding-right: 6px;
-}
-
-.size {
-	width: 240px;
-}
-
-.size input[type="checkbox"] {
-	display: none;
-}
-
-.size label {
-	margin-right: 23px;
-	color: #6f6e6e;
-	font-family: "Open Sans";
-	font-size: 14px;
-	font-weight: 400;
-	text-transform: uppercase;
-	line-height: 15px;
-	vertical-align: middle;
-}
-
-.style_for_checkbox {
-	margin-bottom: 13px;
-}
-
-.style_for_checkbox label:last-child {
-	margin-right: 0;
-}
-
-.size label::before {
-	content: "";
-	display: inline-block;
-	width: 13px;
-	height: 13px;
-	border: 1px solid #ebebeb;
-	background-color: #ffffff;
-	vertical-align: middle;
-	margin-right: 9px;
-}
-
-.size input[type="checkbox"]:checked + label::before {
-	background-image: url("../img/checked.svg");
-}
-
-.price input {
-	width: 262px;
-}
-
-.money {
+.collection__content_choice {
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
 	display: flex;
 	justify-content: space-between;
+	width: 540px;
+	margin: 0 auto;
+	margin-top: 63px;
 }
 
-.money h2, h3 {
-	margin-left: 0;
-	color: #6f6e6e;
-	font-family: "Open Sans";
+.collection__content_choice_block h3 {
+	color: #2f2f2f;
+	font-family: Lato;
 	font-size: 14px;
-	font-weight: 400;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin-right: 35px;
 }
 
-.sorting {
-	width: 100%;
-	max-width: 846px;
-	height: 50px;
-	background-color: #f3f3f3;
-	margin-top: 16px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	align-items: center;
-}
-
-.sorting a {
-	width: 66px;
-	height: 30px;
+.collection__content_choice_block a {
+	width: 144px;
+	height: 35px;
+	border: 1px solid #eaeaea;
 	display: inline-block;
-	text-align: center;
-	line-height: 30px;
-	background-color: #fff;
-	border: 1px solid #ebebeb;
-	margin-left: 9px;
-	color: #6f6e6e;
+	text-align: left;
+	line-height: 35px;
+	color: #bcbcbc;
 	font-family: Lato;
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: 400;
+	padding-left: 10px;
+	margin-top: 16px;
 }
 
-.sorting summary {
-	width: 86px;
-	height: 30px;
-	border: 1px solid #ebebeb;
+.another_style::before {
+	content: "";
+	width: 12px;
+	height: 12px;
+	background-color: #ef5b70;
+	display: inline-block;
+	margin-right: 11px;
+}
+
+.another_style i {
+	padding-left: 67px;
+	color: #bcbcbc;
+	font-size: 14px;
+}
+
+.another_style2 i {
+	padding-left: 87px;
+	color: #bcbcbc;
+	font-size: 14px;
+}
+
+#collection__link {
+	width: 537px;
+	height: 55px;
+	border: 1px solid #ef5b70;
 	background-color: #ffffff;
-	line-height: 30px;
-	color: #6f6e6e;
+	display: inline-block;
+	line-height: 55px;
+	position: relative;
+	padding-left: 20px;
+	color: #ef5b70;
 	font-family: Lato;
-	font-size: 14px;
-	font-weight: 400;
-	display: block;
-	padding-left: 11px;
+	font-size: 16px;
+	font-weight: 700;
+	margin-top: 28px;
 }
 
-.sorting summary::-webkit-details-marker {
-  	display: none;
-}
-
-.sorting summary::after {
-  	content: '\25BC';
-  	font-size: 10px;
-  	color: #6f6e6e;
-	font-family: "Font Awesome";
-	font-weight: 400;
-	margin-left: 21px;
-}
-
-.sorting details[open] > summary::after {
-	  content: '\25B2';
-}
-
-#sorting_link2 {
-	width: 55px!important;
-}
-
-#sorting_details2 {
-	width: 63px;
-}
-
-#sorting_details2::after {
-	margin-left: 18px;
+#collection__link img {
+	position: absolute;
+	top: 30%;
+	left: 38%;
 }
 
 .fetured_Items {
 	width: 100%;
-	max-width: 850px;
+	max-width: 1140px;
 	margin: 0 auto;
-	margin-top: 0;
+	margin-top: 759px;
+}
+
+.logo {
+	width: 348px;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.logo h1 {
+	color: #222222;
+	font-family: Lato;
+	font-size: 30px;
+	font-weight: 700;
+}
+
+.logo p {
+	color: #9f9f9f;
+	font-family: Lato;
+	font-size: 14px;
+	font-weight: 400;
 }
 
 .product {
@@ -555,10 +677,10 @@ hr {
 }
 
 .block h1 {
-	color: #222222;
+	color: #6f6e6e;
 	font-family: Lato;
-	font-size: 13px;
-	font-weight: 700;
+	font-size: 14px;
+	font-weight: 400;
 	text-transform: uppercase;
 	margin-left: 14px;
 	margin-top: 20px
@@ -601,124 +723,21 @@ hr {
 .color {
 	background-color: #e9e9e9;
 	text-align: center;
+	padding-top: 7px;
+	height: 280px;
 }
 
 .color2 {
-	width: 263px;
-	background-color: #f1edea;
+	background-color: #e9e9e9;
 	text-align: center;
+	height: 280px;
+	position: relative;
 }
 
-.menu_number {
-	width: 100%;
-	max-width: 850px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-	margin-top: 43px;
-}
-
-.menu_number__link {
-	width: 261px;
-	height: 44px;
-	border-radius: 3px;
-	border: 1px solid #ebebeb;
-	background-color: #ffffff;
-	text-align: center;
-	line-height: 44px;
-}
-
-.menu_number__link a {
-	color: #c4c4c4;
-	font-family: Lato;
-	font-size: 16px;
-	font-weight: bold;
-	margin-left: 13px;
-}
-
-.menu_number__link a:first-child {
-	margin-left: 10px;
-}
-
-.menu_number__link a:last-child {
-	margin-right: 10px;
-}
-
-#padding {
-	margin-left: 0;
-}
-
-.menu_number__link a:focus {
-	color: #ef5b70;
-}
-
-.menu_number__link2 a {
- 	width: 150px;
-	height: 44px;
-	border-radius: 3px;
-	border: 1px solid #ef5b70;
-	background-color: #ffffff;
-	display: inline-block;
-	text-align: center;
-	line-height: 44px;
-	color: #ef5b70;
-	font-family: Lato;
-	font-size: 16px;
-	font-weight: bold;
-}
-
-.menu_number__link2 a:hover {
-	background-color: #ef5b70;
-	color: #fff;
-	transition: .2s linear;
-}
-
-
-.advantage {
-	width: 100%;
-	height: 341px;
-	background-color: #222224;
-	margin-top: 110px;
-}
-
-.advantage__content {
-	margin: 0 auto;
-	padding-top: 89px;
-	width: 100%;
-	max-width: 1090px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-}
-
-.advantage__content__block {
-	text-align: center;
-	width: 309px;
-}
-
-.advantage__content__block img {
-	margin-bottom: 32px;
-}
-
-.advantage__content__block h1 {
-	margin-bottom: 17px;
-	color: #fbfbfb;
-	font-family: Lato;
-	font-size: 20px;
-	font-weight: 700;
-}
-
-.advantage__content__block p {
-	color: #fbfbfb;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 300;
+.color2 img {
+	position: absolute;
+	left: 30%;
+	bottom: 1%;
 }
 
 .slider {
@@ -834,7 +853,7 @@ hr {
 	padding-left: 28px;
 }
 
-.subscribe__input a {
+.subscribe__input input[type="submit"] {
 	color: #ffffff;
 	font-family: Lato;
 	font-size: 14px;
@@ -845,10 +864,12 @@ hr {
 	background-color: #f16d7f;
 	display: inline-block;
 	line-height: 46px;
-	padding-left: 21px;
+	padding-left: 0!important;
+	text-align: center;
+	cursor: pointer;
 }
 
-.subscribe__input a:hover {
+.subscribe__input input[type="submit"]:hover {
 	background-color: #000;
 	transition: .2s linear;
 }
