--- a/DZ4/assets/css/style2.css
+++ b/DZ4/assets/css/style2.css
@@ -196,6 +196,138 @@ header {
 	padding: 0;
 }
 
+.container__basket_link {
+	position: relative;
+}
+
+.container__basket_drop {
+	width: 262px;
+	height: 440px;
+	border-radius: 5px;
+	background-color: #fff;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
+	border: 1px solid #e9e9e9;
+	position: absolute;
+	top: 50px;
+	left: -15px;
+	display: none;
+}
+
+.container__basket_link:hover .container__basket_drop {
+	display: block;
+}
+
+.container__basket_drop::before {
+	content: "";
+	width: 10px;
+	height: 10px;
+	background-color: #fff;
+	border-left: 1px solid #e9e9e9;
+	border-top: 1px solid #e9e9e9;
+	display: block;
+	position: absolute;
+	transform: rotate(45deg);
+	bottom: 99%;
+	left: 26px;
+}
+
+.container__basket_drop hr {
+	width: 229px;
+	margin: 0 auto;
+	margin-top: 16px;
+	margin-bottom: 16px;
+}
+
+.container__basket_drop_block {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	margin-top: 21px;
+	margin-left: 17px;
+}
+
+.container__basket_drop_block img {
+	margin-right: 15px;
+}
+
+.container__basket_drop_text h1 {
+	color: #222222;
+	font-family: Lato;
+	font-size: 12px;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin-top: 10px;
+}
+
+.container__basket_drop_text i {
+	font-size: 12px;
+	color: #e4af48;
+	margin-top: 10px;
+}
+
+.fas2 {
+	font-size: 16px;
+	color: #c0c0c0;
+	margin-top: 35px;
+	margin-left: 50px;
+}
+
+.container__basket_drop_text h2 {
+	color: #f16d7f;
+	font-family: Lato;
+	font-size: 12px;
+	font-weight: 400;
+	text-transform: uppercase;
+	margin-left: 0;
+	margin-top: 12px;
+}
+
+.container__basket_drop_text2, .container__basket_drop_link {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+	width: 229px;
+	margin: 0 auto;
+}
+
+.container__basket_drop_link {
+	display: block!important;
+	margin-top: 32px;
+}
+
+.container__basket_drop_link a {
+	display: inline-block;
+	width: 225px;
+	height: 50px;
+	border: 1px solid #f16d7f;
+	color: #f16d7f;
+	font-family: Lato;
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+	text-align: center;
+	line-height: 50px;
+}
+
+.container__basket_drop_link a:last-child {
+	border: 1px solid #eaeaea;
+	color: #4a4a4a;
+	margin-top: 11px;
+}
+
+.container__basket_drop_text2 h1 {
+	color: #222222;
+	font-family: Lato;
+	font-size: 16px;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
 .container__basket {
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -1325,8 +1457,12 @@ footer {
 	background-color: #f16d7f;
 }
 
-#bgc_link1 {
-	background-color: #f16d7f;
+.footer__content__link a:hover i {
+	color: #f7f7f8;
+}
+
+.footer__content__link i {
+	color: #b2b2b2;
 }
 
 #bgc_link2 {
