--- a/DZ5/assets/css/style5.css
+++ b/DZ5/assets/css/style5.css
@@ -337,6 +337,23 @@ header {
 	align-items: center;
 }
 
+.container__basket_link a {
+	padding-bottom: 20px;
+}
+
+.container__basket img {
+	margin-right: 26px;
+}
+
+.container__basket {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	align-items: center;
+}
+
 .container__basket img {
 	margin-right: 26px;
 }
@@ -494,708 +511,145 @@ hr {
 	color: #f16d7f;
 }
 
-.buy {
+.shipping {
 	width: 100%;
 	max-width: 1140px;
-	margin: 0 auto;
-	margin-top: 59px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-
+	margin: 93px auto;
 }
 
-.margin__details {
-	margin-top: 41px;
-}
-
-.margin__details span {
-	visibility: hidden;
-}
-
-.details summary {
-	border-left: 5px solid #ef5b70;
-	height: 37px;
-	line-height: 37px;
-	padding-left: 11px;
-}
-
-.details summary {
-  	display: block;
-  	color: #6f6e6e;
+.shipping h1 {
+	color: #222222;
 	font-family: Lato;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: 700;
-	border-bottom: 1px solid #ebebeb;
-	width: 243px;
+	text-transform: uppercase;
 }
 
-.details summary::-webkit-details-marker {
-  	display: none;
-}
-
-.details summary::after {
-  	content: '\25B2';
-  	margin-left: 137px;
-  	font-size: 10px;
-  	color: #6f6e6e;
-}
-
-.details details[open] > summary {
-	color: #ef5b70;
-	font-family: Lato;
-}
-
-.details details[open] > summary::after {
-	  content: '\25BC';
-	  color: red;
-	  margin-left: 137px;
-}
-
-.details li {
-	margin-top: 22px;
-	margin-left: 22px;
-	color: #6f6e6e;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 400;
-}
-
-.buy__content, .choice {
-	width: 100%;
-	max-width: 850px;
+.shipping__block {
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
-	display: flex;
+	display: flex;	
 	justify-content: space-between;	
-	flex-wrap: wrap;
+	margin-top: 39px;	
 }
 
-.choice h1 {
-	margin-bottom: 25px;
-	color: #6f6e6e;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 700;
-	text-transform: uppercase;
+.shipping__block__content1 {
+	margin-left: 35px;
 }
 
-.trending p {
-	width: 176px;
-	font-size: 14px;
-	line-height: 26px;
-}
-
-.trending a {
-	color: #6f6e6e;
-	font-family: Lato;
-	font-weight: 400;
-}
-
-.trending span {
-	color: #dfdfdf;
-	padding-left: 6px;
-	padding-right: 6px;
-}
-
-.size {
-	width: 240px;
-}
-
-.size input[type="checkbox"] {
-	display: none;
-}
-
-.size label {
-	margin-right: 23px;
-	color: #6f6e6e;
-	font-family: "Open Sans";
-	font-size: 14px;
-	font-weight: 400;
-	text-transform: uppercase;
-	line-height: 15px;
-	vertical-align: middle;
-}
-
-.style_for_checkbox {
-	margin-bottom: 13px;
-}
-
-.style_for_checkbox label:last-child {
-	margin-right: 0;
-}
-
-.size label::before {
-	content: "";
-	display: inline-block;
-	width: 13px;
-	height: 13px;
-	border: 1px solid #ebebeb;
-	background-color: #ffffff;
-	vertical-align: middle;
-	margin-right: 9px;
-}
-
-.size input[type="checkbox"]:checked + label::before {
-	background-image: url("../img/checked.svg");
-}
-
-.price input {
-	width: 262px;
-}
-
-.money {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-}
-
-.money h2, h3 {
-	margin-left: 0;
-	color: #6f6e6e;
-	font-family: "Open Sans";
-	font-size: 14px;
-	font-weight: 400;
-}
-
-.sorting {
-	width: 100%;
-	max-width: 846px;
-	height: 50px;
-	background-color: #f3f3f3;
-	margin-top: 16px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	align-items: center;
-}
-
-.sorting a {
-	width: 66px;
-	height: 30px;
-	display: inline-block;
-	text-align: center;
-	line-height: 30px;
-	background-color: #fff;
-	border: 1px solid #ebebeb;
-	margin-left: 9px;
-	color: #6f6e6e;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 400;
-}
-
-.sorting summary {
-	width: 86px;
-	height: 30px;
-	border: 1px solid #ebebeb;
-	background-color: #ffffff;
-	line-height: 30px;
-	color: #6f6e6e;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 400;
-	display: block;
-	padding-left: 11px;
-}
-
-.sorting summary::-webkit-details-marker {
-  	display: none;
-}
-
-.sorting summary::after {
-  	content: '\25BC';
-  	font-size: 10px;
-  	color: #6f6e6e;
-	font-family: "Font Awesome";
-	font-weight: 400;
-	margin-left: 21px;
-}
-
-.sorting details[open] > summary::after {
-	  content: '\25B2';
-}
-
-#sorting_link2 {
-	width: 55px!important;
-}
-
-#sorting_details2 {
-	width: 63px;
-}
-
-#sorting_details2::after {
-	margin-left: 18px;
-}
-
-.fetured_Items {
-	width: 100%;
-	max-width: 850px;
-	margin: 0 auto;
-	margin-top: 0;
-}
-
-.product {
-	width: 100%;
-	max-width: 1140px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-	margin-top: 60px;
-}
-
-.block {
-	width: 263px;
-	height: 364px;
-	position: relative;
-}
-
-#shadow:hover {
-	box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16);
-	background-color: #ffffff;
-}
-
-.block__background {
-	width: 263px;
-	height: 281px;
-	background-color: #3a3838;
-	opacity: 0.8;
-	position: absolute;
-	top: 0%;
-	display: none;
-}
-
-.block__background2 {
-	margin-left: 26%;
-	width: 124px;
-	height: 40px;
-	position: absolute;
-	top: 30%;
-	display: none;
-}
-
-.block__background2 a {
-	color: #ffffff;
-	font-family: Lato;
-	font-size: 13px;
-	font-weight: 700;
-	padding-left: 43px;
-	line-height: 39px;
-	width: 123px;
-	height: 39px;
-	border: 1px solid #ffffff;
-	display: inline-block;
-	position: relative;
-}
-
-.block__background2 img {
-	position: absolute;
-	left: 10%;
-	top: 8px;
-}
-
-.block:hover .block__background {
-	display: block;
-}
-
-.block:hover .block__background2 {
-	display: block;
-}
-
-.block h1 {
+.shipping__block__content1 h2, .shipping__block__content2 h2 {
 	color: #222222;
 	font-family: Lato;
 	font-size: 13px;
-	font-weight: 700;
+	font-weight: 400;
 	text-transform: uppercase;
-	margin-left: 14px;
-	margin-top: 20px
+	margin-bottom: 15px;
 }
 
-.block h2 {
-	color: #f16d7f;
-	font-family: Lato;
-	font-size: 16px;
-	font-weight: 700;
-	text-transform: uppercase;
-	margin-left: 14px;
-	margin-top: 17px
-}
-
-.product_link {
-	width: 212px;
-	margin: 0 auto;
-	margin-top: 60px;
-}
-
-.product_link a {
-	color: #ffffff;
-	font-family: Lato;
-	font-size: 16px;
-	font-weight: 700;
-	width: 212px;
-	height: 48px;
-	background-color: #f16d7f;
-	display: inline-block;
-	text-align: center;
-	line-height: 48px;
-}
-
-.product_link a:hover {
-	background-color: #000;
-	transition: .2s linear;
-}
-
-.color {
-	background-color: #e9e9e9;
-	text-align: center;
-}
-
-.color2 {
-	width: 263px;
-	background-color: #f1edea;
-	text-align: center;
-}
-
-.menu_number {
-	width: 100%;
-	max-width: 850px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-	margin-top: 43px;
-}
-
-.menu_number__link {
-	width: 261px;
-	height: 44px;
-	border-radius: 3px;
-	border: 1px solid #ebebeb;
-	background-color: #ffffff;
-	text-align: center;
-	line-height: 44px;
-}
-
-.menu_number__link a {
-	color: #c4c4c4;
-	font-family: Lato;
-	font-size: 16px;
-	font-weight: bold;
-	margin-left: 13px;
-}
-
-.menu_number__link a:first-child {
-	margin-left: 10px;
-}
-
-.menu_number__link a:last-child {
-	margin-right: 10px;
-}
-
-#padding {
-	margin-left: 0;
-}
-
-.menu_number__link a:focus {
-	color: #ef5b70;
-}
-
-.menu_number__link2 a {
- 	width: 150px;
-	height: 44px;
-	border-radius: 3px;
-	border: 1px solid #ef5b70;
-	background-color: #ffffff;
-	display: inline-block;
-	text-align: center;
-	line-height: 44px;
-	color: #ef5b70;
-	font-family: Lato;
-	font-size: 16px;
-	font-weight: bold;
-}
-
-.menu_number__link2 a:hover {
-	background-color: #ef5b70;
-	color: #fff;
-	transition: .2s linear;
-}
-
-.advantage {
-	width: 100%;
-	height: 341px;
-	background-color: #222224;
-	margin-top: 110px;
-}
-
-.advantage__content {
-	margin: 0 auto;
-	padding-top: 89px;
-	width: 100%;
-	max-width: 1090px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-}
-
-.advantage__content__block {
-	text-align: center;
-	width: 309px;
-}
-
-.advantage__content__block img {
-	margin-bottom: 32px;
-}
-
-.advantage__content__block h1 {
-	margin-bottom: 17px;
-	color: #fbfbfb;
-	font-family: Lato;
-	font-size: 20px;
-	font-weight: 700;
-}
-
-.advantage__content__block p {
-	color: #fbfbfb;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 300;
-}
-
-.slider2 {
-	width: 100%;
-	height: 777px;
-	border: 1px solid #eaeaea;
-	background-color: #f7f7f7;
-}
-
-.slider2__content {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-}
-
-.slider2__content img {
-	margin-top: 11px;
-}
-
-.slider2__content a {
-	margin-top: 354px;
-	width: 47px;
-	height: 47px;
-	background-color: #d8d8d8;
-	text-align: center;
-	line-height: 47px;
-}
-
-.slider2__content i {
-	width: 8px;
-	height: 14px;
-	color: #ffffff;
-}
-
-.section {
-	width: 100%;
-	height: 1289px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: center;
-	position: relative;
-}
-
-.collection {
-	width: 100%;
-	max-width: 1141px;
-	height: 730px;
-	border: 1px solid #eaeaea;
-	background-color: #fff;
-	position: absolute;
-	bottom: 50%;
-}
-
-.collection__content {
-	width: 642px;
-	margin: 0 auto;
-	margin-top: 72px;
-	text-align: center;
-}
-
-.collection__content h1 {
-	color: #f16d7f;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 700;
-	text-transform: uppercase;
-	margin-bottom: -15px;
-}
-
-.collection__content_link {
-	width: 147px;
-	margin: 0 auto;
-	position: relative;
-}
-
-.collection__content_link a {
-	width: 63px;
-	height: 3px;
-	background-color: #ef5b70;
-	position: absolute;
-	bottom: 10%;
-	left: 28%;
-}
-
-.collection__content h2 {
-	color: #4d4d4d;
-	font-family: Lato;
-	font-size: 18px;
-	font-weight: 900;
-	text-transform: uppercase;
-	margin-top: 17px;
-}
-
-.collection__content p {
-	margin-top: 67px;
-	color: #5e5e5e;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 300;
-	line-height: 24px;
-}
-
-.collection__content_info {
-	width: 335px;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-	margin: 0 auto;
-	margin-top: 28px;
-}
-
-.collection__content_info h3 {
-	color: #b9b9b9;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 700;
-	text-transform: uppercase;
-}
-
-.collection__content_info span {
-	color: #2f2f2f;
-}
-
-.collection__content h4 {
-	color: #ef5b70;
-	font-family: Lato;
-	font-size: 24px;
-	font-weight: 700;
-	margin-top: 37px;
-}
-
-.collection__content_choice {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-	width: 540px;
-	margin: 0 auto;
-	margin-top: 63px;
-}
-
-.collection__content_choice_block h3 {
-	color: #2f2f2f;
-	font-family: Lato;
-	font-size: 14px;
-	font-weight: 700;
-	text-transform: uppercase;
-	margin-right: 35px;
-}
-
-.collection__content_choice_block a {
-	width: 144px;
-	height: 35px;
-	border: 1px solid #eaeaea;
-	display: inline-block;
-	text-align: left;
-	line-height: 35px;
-	color: #bcbcbc;
+.shipping__block__content1 p, .shipping__block__content2 p {
+	color: #b3b2b2;
 	font-family: Lato;
 	font-size: 13px;
 	font-weight: 400;
-	padding-left: 10px;
+	margin-bottom: 27px;
+}
+
+.shipping__block__content1 p {
+	margin-bottom: 34px;
+}
+
+.shipping__block__content1 label {
+	color: #222222;
+	font-family: Lato;
+	font-size: 12px;
+	font-weight: 400;
+	text-transform: uppercase;
+	margin-left: 14px;
+}
+
+.shipping__block__content1 a {
+	padding: 19px 53px 19px 54px;
+	border: 1px solid #eaeaea;
+	color: #4a4a4a;
+	font-family: Lato;
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+	display: inline-block;
+}
+
+.shipping__block__content2 {
+	margin-right: 167px;
+}
+
+.shipping__block__content2 h3 {
+	color: #222222;
+	font-family: Lato;
+	font-size: 12px;
+	font-weight: 400
+}
+
+.shipping__block__content2 span {
+	color: #ff0d0d;
+	font-family: Lato;
+	font-size: 17px;
+	font-weight: 400;
+}
+
+.shipping__block__content2 h4 {
+	color: #ff0d0d;
+	font-family: Lato;
+	font-size: 13px;
+	font-weight: 400;
+}
+
+.shipping__block__content2 input[type="email"], input[type="password"] {
+	width: 390px;
+	height: 45px;
+	border: 1px solid #eaeaea;
 	margin-top: 16px;
+	margin-bottom: 23px;
 }
 
-.another_style::before {
-	content: "";
-	width: 12px;
-	height: 12px;
-	background-color: #ef5b70;
-	display: inline-block;
-	margin-right: 11px;
+.shipping__block__content2 input[type="submit"] {
+	background-color: #fff;
+	border: 1px solid #eaeaea;
+	padding: 19px 81px 19px 55px;
+	margin-top: 32px;
+	cursor: pointer;
 }
 
-.another_style i {
-	padding-left: 67px;
-	color: #bcbcbc;
+.shipping__block__content2 a {
+	color: #222222;
+	font-family: Lato;
 	font-size: 14px;
+	font-weight: 400;
+	margin-left: 32px;
 }
 
-.another_style2 i {
-	padding-left: 87px;
-	color: #bcbcbc;
-	font-size: 14px;
+.shipping2 {
+	width: 100%;
+	max-width: 1140px;
+	margin: 0 auto;
+	margin-top: 79px;
+	margin-bottom: 93px;
 }
 
-#collection__link {
-	width: 537px;
-	height: 55px;
-	border: 1px solid #ef5b70;
-	background-color: #ffffff;
-	display: inline-block;
-	line-height: 55px;
-	position: relative;
-	padding-left: 20px;
-	color: #ef5b70;
+.shipping2 h1 {
+	color: #222222;
 	font-family: Lato;
 	font-size: 16px;
 	font-weight: 700;
-	margin-top: 28px;
 }
 
-#collection__link img {
-	position: absolute;
-	top: 30%;
-	left: 38%;
+.shipping2 hr {
+	margin-bottom: 33px;
+}
+
+.shipping2 hr:last-child {
+	margin-bottom: 0;
 }
 
 .slider {
